--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BIZMEMORY</title>
-  <link rel="stylesheet" href="./test-bizmemory-reset.css">
-  <link rel="stylesheet" href="./test-bizmemory.css">
-  <script defer src="./test-bizmemory.js"></script>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <script defer src="./js/main.js"></script>
 </head>
 <body>
 
