--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <input type="text" class="newName" placeholder="Name">
       <span class="nameWarn warnMsg">이름을 2자 이상 입력해주세요.</span>
       <input type="text" class="newCompany" placeholder="Company">
-      <input type="text" class="newDevision" placeholder="Company Devision">
+      <input type="text" class="newDivision" placeholder="Company Division">
       <input type="text" class="newPosition" placeholder="Company Position">
       <input type="text" class="newEmail" placeholder="E-mail">
       <span class="emailWarn warnMsg">이메일을 형식에 맞게 입력해주세요. abc@xyz.com</span>
       <input type="text" class="newMobile" placeholder="Mobile Number">
       <span class="emailWarn warnMsg">핸드폰번호를 형식에 맞게 입력해주세요.</span>
-      <button class="submitBtn">Add bizCard</button>
+      <button class="submitBtn invalid">Add bizCard</button>
     </div>
 
     <!-- name card -->
